# zeroclaw

./: .gitignore  Cargo.toml  PR_DESCRIPTION.md  temp_config.toml
.workspace/role_templates/: analyst.yaml  architect.yaml  developer.yaml  product_manager.yaml  qa_engineer.yaml  scrum_master.yaml
.workspace/workflow_templates/: 15eb5606-5b8d-4e7e-bc7b-284323ff4f94.json  35e66838-af9d-4677-b220-0c9978bb436c.json  38412ccc-9d47-4b99-a772-3f54b784278e.json  5b39dd45-deca-4c75-af07-cba19a3804e1.json  6011c89f-cb02-4957-9fbb-31ccac56e8d8.json  63eb30c8-3ce9-4313-b225-c4a32197706c.json  7b197d73-f0ac-46df-babb-e5c7fa808c6a.json  7ce3d5ef-9820-4d30-8dd9-bc8b57257d16.json  8dcd18c8-892e-4043-9ad7-0f3e8e7b5da7.json  8e7ac27d-03a8-4617-981d-2269cdc56d7d.json  8e7feda4-0821-4930-b0d7-041110e30739.json  a5e6df3e-e5e7-4f77-9739-869d3a03d449.json  b357d54b-55dd-4e2e-ae3b-1954fbcd13ae.json  bc54e90f-b266-4a4d-baaf-11cfa261555d.json  da5e5288-eb24-49b6-a77f-a79773843182.json  f40c2dc2-cdd1-416f-b1a7-5a8d020691dd.json  scrum-enhanced-v1.json
.workspace/workflows/: 02e0cc34-6241-4d34-814e-4e790314fc51.json  07f38a18-bad7-4c59-891d-79092990494b.json  08186514-db8b-4540-9709-7332b1276128.json  0f27543c-84e8-47c3-85db-40715e63b01c.json  12887908-61fd-4e3f-9044-7168c35bcbd3.json  1793327e-5226-4ba1-b363-4a11e43b3c44.json  312f5e56-e87b-4eba-a9e6-b1c6cc27b46a.json  3322be91-1ce7-48bb-a5c3-619a7d57adc6.json  35b1aeca-f8ac-4811-8e28-968ad9e1d9c6.json  392d006f-5628-44d8-b23d-6a123ee47067.json  3b44f4f5-0c0b-403a-a399-483c12b6de18.json  3c93a623-7258-46e8-a174-536e129c9ee3.json  449c0e82-59f9-460b-9235-eb9d977d4922.json  4bc96204-d534-4097-87cd-f82db6d7e078.json  4bf4702f-7768-477f-bb9d-3188275ab657.json  5058ffb4-3235-452d-895a-1939bb570c28.json  526b021a-8dcc-4fc0-8829-642dc04e56d2.json  539154cc-8649-4097-abf4-e448aee42cdf.json  544e5012-f8b4-4ed1-ba0f-6ad0658f80c3.json  59c4591c-d41d-404b-afaf-794c957066b6.json  5ec47b74-7cf2-433c-a21f-4a2363c3d001.json  5efee788-c804-457c-8e37-1afdb2079bd0.json  5ff1cfbf-25c3-48f6-bf37-37f0f4f389fd.json  61996411-4e6f-4e57-b02a-2c738b470fd5.json  69f5dffb-b7a2-4d2c-89c8-05c274a4d95f.json  6af10220-2e69-4443-8eea-4aedccbff01a.json  6bbb20c5-cc87-4bd3-8b2c-ce305025ae8a.json  7095be5e-59e9-4cd0-8d47-795c128f1438.json  74984a29-ec31-4f63-89ff-8649b4d5aef3.json  758cf510-577b-4286-80be-d506202bbd52.json  76c11e6a-2969-48cd-a922-274ec0efdd75.json  778d59c2-903e-4e95-85db-91748f3e9c87.json  7de9f73f-573d-4ba1-b18f-c5ff5176305f.json  816321ca-b02b-4900-b1db-8b96ad7510cb.json  84dc1793-69d9-4e4a-a5a7-95daa9c4ebdc.json  8a851ddd-52ba-4f32-a114-5fb993c301a5.json  8b4fc323-0b14-455b-8126-82b4c723253f.json  952ac3f9-6c49-4b47-8d51-64f8e3d8f35a.json  97506b67-62eb-4ce9-9160-4073ae689e62.json  9cd41015-343c-4915-ae9a-b88fe9a4b00f.json  (+23 more)
PRD/: PRD.md  README.md  TODO_AUDIT_REPORT.md
database/schemas/: brain.sql  chat.sql  experience.sql  knowledge.sql  soul.sql  swarm.sql  team.sql  traces.sql  workflow.sql
docs/: DATA_FLOW_ANALYSIS.md  agent-swarm-en.md  agent-swarm.md  dual_layer_context_architecture.md  optimization_design_2026.md
docs/workflow-templates/: ai_translate_doc.py  ai_translate_doc_fixed.py  ai_translate_doc_format.py  create_translated_doc.py  extract_document.py  extracted_content.json  test_open_docx.py  translate_complete.py  translate_document.py  verify_translation.py
examples/: custom_channel.rs
src/: lib.rs  main.rs
src/agent/: loop_.rs  mod.rs
src/channels/: cli.rs  discord.rs  matrix.rs  mod.rs  slack.rs  telegram.rs  traits.rs  whatsapp.rs
src/config/: hot_reload.rs  mod.rs  schema.rs
src/context/: conflict_resolver.rs  filter.rs  global_manager.rs  llm_client.rs  metrics.rs  mod.rs  summarizer.rs  synchronizer.rs  task_context.rs  vector_store.rs  version_control.rs
src/db/: config.rs  mod.rs  pool.rs  sql_loader.rs
src/gateway/: config_endpoints.rs  event_handlers.rs  mod.rs  store_api.rs
src/gui/: agent.rs  context.rs  examples.rs  launcher.rs  mod.rs  perceptor.rs  planner.rs  recovery.rs
src/mcp/: mod.rs  store.rs  tool_adapter.rs
src/memory/: chunker.rs  lucid.rs  markdown.rs  none.rs  sqlite.rs  traits.rs
src/observability/: alert.rs  failure.rs  log.rs  mod.rs  multi.rs  noop.rs  otel.rs  progress.rs  traits.rs  verbose.rs
src/onboard/: wizard.rs
src/optimization/: dynamic_tools.rs  enhanced_memory.rs  experience_system.rs  hierarchical_memory.rs  history_compactor.rs  knowledge_base.rs  layered_context.rs  mod.rs  shared_context.rs  workflow_deliberation.rs
src/peripherals/: arduino_upload.rs  capabilities_tool.rs  serial.rs  uno_q_bridge.rs
src/prompt_optimizer/: cache.rs  compressor.rs  mod.rs  task_analyzer.rs
src/providers/: anthropic.rs  compatible.rs  delay.rs  echo.rs  gemini.rs  mod.rs  ollama.rs  openai.rs  openrouter.rs  reliable.rs  router.rs  traced.rs  traits.rs
src/runtime/: native.rs
src/security/: policy.rs
src/skills/: clawhub.rs  learning.rs  mod.rs  skill_sync.rs
src/soul/: engine.rs  mod.rs  presets.rs  types.rs
src/store/: agent_group.rs  chat.rs  (+7 more)
test/: api_validator.js  integration_test.py
tests/: agent_swarm_complex_test.rs  agent_swarm_diagnostic_test.rs  agent_swarm_flow.rs  agent_swarm_group_chat_test.rs  agent_swarm_improved_test.rs  agent_swarm_minimal_test.rs  agent_swarm_pm_spawn_test.rs  agent_swarm_simple_orchestrator_test.rs  agent_swarm_simple_test.rs  business_process_integration_test.rs  cache_mechanism_test.rs  config_unit_test.rs  context_architecture_integration.rs  database_integration_test.rs  db_integration_test.rs  gui_agent_macos_test.sh  gui_integration_test.rs  gui_launcher_unit_test.rs  gui_planner_unit_test.rs  memory_unit_test.rs  prompt_optimizer_integration_test.rs  screen_capture_test.sh  scrum_workflow_integration_test.rs  scrum_workflow_test.rs  security_unit_test.rs  security_vulnerability_scenarios.rs  soul_unit_test.rs  sse_test.sh  swarm_queue.rs  swarm_registry_load.rs  tool_unit_test.rs  toolmarket_mcp_integration_test.rs  workflow_integration_test.rs  workflow_simple_test.rs  workflow_team_integration_test.rs  workflow_template_test.rs
(+80 files in other folders)
